--- a/index.html
+++ b/index.html
@@ -39,12 +39,17 @@
                 </nav>
             </div>
             <ul class="index-header-contacts list">
-                <li><svg class="index-envelope-icon" width="16" height="12"> <use href="images/sprite.svg#icon-envelope"></use></svg> </li>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><svg class="index-smartphone-icon" width="10" height="16">
+                <li class="index-header-li">
+                    <svg class="index-envelope-icon" width="16" height="12">
+                        <use href="images/sprite.svg#icon-envelope"></use>
+                    </svg>
+                    <a class="index-header-li" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li class="index-header-li"><svg class="index-smartphone-icon" width="10" height="16">
                         <use href="images/sprite.svg#icon-smartphone"></use>
-                    </svg> </li>
-                <li><a href="tel:+48111111111">+48 111 111 111</a></li>
+                    </svg>
+                    <a class="index-header-li" href="tel:+48111111111">+48 111 111 111</a>
+                </li>
             </ul>
         </div>
     </header>
@@ -134,20 +139,28 @@
                             <figcaption class="index-figcaption">
                                 <h4>John Doe</h4>
                                 <p>Product designer</p>
-                                <div class="index-team-icon">
-                                    <svg class="index-team-instagram-icon" width="20" height="20">
-                                        <use href="images/sprite.svg#icon-instagram-2"></use>
-                                    </svg>
-                                    <svg class="index-team-twitter-icon" width="20" height="20">
-                                        <use href="images/sprite.svg#icon-twitter-1"></use>
-                                    </svg>
-                                    <svg class="index-team-facebook-icon" width="20" height="20">
-                                        <use href="images/sprite.svg#icon-facebook-1"></use>
-                                    </svg>
-                                    <svg class="index-team-instagram-icon" width="20" height="20">
-                                        <use href="images/sprite.svg#icon-linkedin-1"></use>
-                                    </svg>
-                                </div>
+                                <section class="index-team-icons">
+                                    <div class="index-team-icon">
+                                        <svg class="index-team-icon1" width="20" height="20">
+                                            <use href="images/sprite.svg#icon-instagram-2"></use>
+                                        </svg>
+                                    </div>
+                                    <div class="index-team-icon">
+                                        <svg class="index-team-icon1" width="20" height="20">
+                                            <use href="images/sprite.svg#icon-twitter-1"></use>
+                                        </svg>
+                                    </div>
+                                    <div class="index-team-icon">
+                                        <svg class="index-team-icon1" width="20" height="20">
+                                            <use href="images/sprite.svg#icon-facebook-1"></use>
+                                        </svg>
+                                    </div>
+                                    <div class="index-team-icon">
+                                        <svg class="index-team-icon1" width="20" height="20">
+                                            <use href="images/sprite.svg#icon-linkedin-1"></use>
+                                        </svg>
+                                    </div>
+                                </section>
                             </figcaption>
                         </figure>
                     </li>
@@ -158,20 +171,28 @@
                             <figcaption class="index-figcaption">
                                 <h4> John Doe</h4>
                                 <p>Frontend Developer</p>
-                                <div class="index-team-icon">
-                                    <svg class="index-team-instagram-icon" width="20" height="20">
-                                        <use href="images/sprite.svg#icon-instagram-2"></use>
-                                    </svg>
-                                    <svg class="index-team-twitter-icon" width="20" height="20">
-                                        <use href="images/sprite.svg#icon-twitter-1"></use>
-                                    </svg>
-                                    <svg class="index-team-facebook-icon" width="20" height="20">
-                                        <use href="images/sprite.svg#icon-facebook-1"></use>
-                                    </svg>
-                                    <svg class="index-team-instagram-icon" width="20" height="20">
-                                        <use href="images/sprite.svg#icon-linkedin-1"></use>
-                                    </svg>
-                                </div>
+                                <section class="index-team-icons">
+                                    <div class="index-team-icon">
+                                        <svg class="index-team-icon1" width="20" height="20">
+                                            <use href="images/sprite.svg#icon-instagram-2"></use>
+                                        </svg>
+                                    </div>
+                                    <div class="index-team-icon">
+                                        <svg class="index-team-icon1" width="20" height="20">
+                                            <use href="images/sprite.svg#icon-twitter-1"></use>
+                                        </svg>
+                                    </div>
+                                    <div class="index-team-icon">
+                                        <svg class="index-team-icon1" width="20" height="20">
+                                            <use href="images/sprite.svg#icon-facebook-1"></use>
+                                        </svg>
+                                    </div>
+                                    <div class="index-team-icon">
+                                        <svg class="index-team-icon1" width="20" height="20">
+                                            <use href="images/sprite.svg#icon-linkedin-1"></use>
+                                        </svg>
+                                    </div>
+                                </section>
                             </figcaption>
                         </figure>
                     </li>
@@ -182,20 +203,28 @@
                             <figcaption class="index-figcaption">
                                 <h4> John Doe</h4>
                                 <p>Marketing</p>
-                                <div class="index-team-icon">
-                                    <svg class="index-team-instagram-icon" width="20" height="20">
-                                        <use href="images/sprite.svg#icon-instagram-2"></use>
-                                    </svg>
-                                    <svg class="index-team-twitter-icon" width="20" height="20">
-                                        <use href="images/sprite.svg#icon-twitter-1"></use>
-                                    </svg>
-                                    <svg class="index-team-facebook-icon" width="20" height="20">
-                                        <use href="images/sprite.svg#icon-facebook-1"></use>
-                                    </svg>
-                                    <svg class="index-team-instagram-icon" width="20" height="20">
-                                        <use href="images/sprite.svg#icon-linkedin-1"></use>
-                                    </svg>
-                                </div>
+                                <section class="index-team-icons">
+                                    <div class="index-team-icon">
+                                        <svg class="index-team-icon1" width="20" height="20">
+                                            <use href="images/sprite.svg#icon-instagram-2"></use>
+                                        </svg>
+                                    </div>
+                                    <div class="index-team-icon">
+                                        <svg class="index-team-icon1" width="20" height="20">
+                                            <use href="images/sprite.svg#icon-twitter-1"></use>
+                                        </svg>
+                                    </div>
+                                    <div class="index-team-icon">
+                                        <svg class="index-team-icon1" width="20" height="20">
+                                            <use href="images/sprite.svg#icon-facebook-1"></use>
+                                        </svg>
+                                    </div>
+                                    <div class="index-team-icon">
+                                        <svg class="index-team-icon1" width="20" height="20">
+                                            <use href="images/sprite.svg#icon-linkedin-1"></use>
+                                        </svg>
+                                    </div>
+                                </section>
                             </figcaption>
                         </figure>
                     </li>
@@ -206,20 +235,28 @@
                             <figcaption class="index-figcaption">
                                 <h4> John Doe</h4>
                                 <p>UI Designer</p>
-                                <div class="index-team-icon">
-                                    <svg class="index-team-instagram-icon" width="20" height="20">
-                                        <use href="images/sprite.svg#icon-instagram-2"></use>
-                                    </svg>
-                                    <svg class="index-team-twitter-icon" width="20" height="20">
-                                        <use href="images/sprite.svg#icon-twitter-1"></use>
-                                    </svg>
-                                    <svg class="index-team-facebook-icon" width="20" height="20">
-                                        <use href="images/sprite.svg#icon-facebook-1"></use>
-                                    </svg>
-                                    <svg class="index-team-instagram-icon" width="20" height="20">
-                                        <use href="images/sprite.svg#icon-linkedin-1"></use>
-                                    </svg>
-                                </div>
+                                <section class="index-team-icons">
+                                    <div class="index-team-icon">
+                                        <svg class="index-team-icon1" width="20" height="20">
+                                            <use href="images/sprite.svg#icon-instagram-2"></use>
+                                        </svg>
+                                    </div>
+                                    <div class="index-team-icon">
+                                        <svg class="index-team-icon1" width="20" height="20">
+                                            <use href="images/sprite.svg#icon-twitter-1"></use>
+                                        </svg>
+                                    </div>
+                                    <div class="index-team-icon">
+                                        <svg class="index-team-icon1" width="20" height="20">
+                                            <use href="images/sprite.svg#icon-facebook-1"></use>
+                                        </svg>
+                                    </div>
+                                    <div class="index-team-icon">
+                                        <svg class="index-team-icon1" width="20" height="20">
+                                            <use href="images/sprite.svg#icon-linkedin-1"></use>
+                                        </svg>
+                                    </div>
+                                </section>
                             </figcaption>
                         </figure>
                     </li>
