--- a/index.html
+++ b/index.html
@@ -40,15 +40,14 @@
             </div>
             <ul class="index-header-contacts list">
                 <li class="index-header-li">
-                    <svg class="index-envelope-icon" width="16" height="12">
+                    <a class="index-header-li" href="mailto:info@devstudio.com"> <svg class="index-header-li" width="16" height="12">
                         <use href="images/sprite.svg#icon-envelope"></use>
-                    </svg>
-                    <a class="index-header-li" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </svg>info@devstudio.com</a>
                 </li>
-                <li class="index-header-li"><svg class="index-smartphone-icon" width="10" height="16">
+                <li class="index-header-li">
+                    <a class="index-header-li" href="tel:+48111111111"></a> <svg class="index-smartphone-icon" width="10" height="16">
                         <use href="images/sprite.svg#icon-smartphone"></use>
-                    </svg>
-                    <a class="index-header-li" href="tel:+48111111111">+48 111 111 111</a>
+                    </svg>+48 111 111 111</a>
                 </li>
             </ul>
         </div>
@@ -114,15 +113,17 @@
                 <h2>Czym się zajmujemy?</h2>
                 <ul class="index-about-list list">
                     <li>
-                        <img src="images/img1.jpg" width="380" height="300"
+                        <img src="images/img1.jpg" width="370" height="294"
                             alt="ktoś pisze na klawiaturze, a przed sobą ma tableta i monitor">
-                    </li>
+                    <div class="sign">
+                        <div></div><p>APLIKACJE KOMPUTEROWE</p></div>
+                        </li>
                     <li>
-                        <img src="images/img2.jpg" width="380" height="300"
+                        <img src="images/img2.jpg" width="370" height="294"
                             alt="ktoś trzyma telefon w dłoni i siedzi przy laptopie">
                     </li>
                     <li>
-                        <img src="images/img3.jpg" width="380" height="300"
+                        <img src="images/img3.jpg" width="370" height="294"
                             alt="pokazany tablet z paletą barw złożoną z małych pięciokątów w jeden duży pięciokąt">
                     </li>
                 </ul>
