--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </svg>info@devstudio.com</a>
                 </li>
                 <li class="index-header-li">
-                    <a class="index-header-li" href="tel:+48111111111"></a> <svg class="index-smartphone-icon" width="10" height="16">
+                    <a class="index-header-li" href="tel:+48111111111"> <svg class="index-smartphone-icon" width="10" height="16">
                         <use href="images/sprite.svg#icon-smartphone"></use>
                     </svg>+48 111 111 111</a>
                 </li>
