--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
                         <li class="index-nav-li"><a href="https://maksymilianbilski.github.io/goit-markup-hw-04/"
                                 class="index-upper-link">Agencja</a>
                         </li>
-                        <li class="index-nav-li"><a
-                                href="https://maksymilianbilski.github.io/goit-markup-hw-04/portfolio.html"
+                        <li class="index-nav-li"><a href="https://maksymilianbilski.github.io/goit-markup-hw-04/portfolio.html"
                                 class="index-upper-link">Portfolio</a></li>
                         <li class="index-nav-li"><a href="https://maksymilianbilski.github.io/goit-markup-hw-04/"
                                 class="index-upper-link">Kontakt</a>
