walk z tekstem w portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,16 +36,15 @@
                     </ul>
                 </nav>
                 <ul class="portfolio-header-contacts list">
-                    <li><svg class="portfolio-envelope-icon" width="16" height="12">
-                            <use href="images/sprite.svg#icon-envelope"></use>
-                        </svg> </li>
                     <li>
-                        <a class="" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <a class="portfolio-header-icon" href="mailto:info@devstudio.com"> <svg class="portfolio-envelope-icon" width="16" height="12">
+                            <use href="images/sprite.svg#icon-envelope"></use>
+                        </svg>info@devstudio.com</a>
                     </li>
-                    <li><svg class="portfolio-smartphone-icon" width="10" height="16">
+                    <li>
+<a class="portfolio-header-icon" href="tel:+48111111111"><svg class="portfolio-smartphone-icon" width="10" height="16">
                             <use href="images/sprite.svg#icon-smartphone"></use>
-                        </svg> </li>
-                    <li><a class="" href="tel:+48111111111">+48 111 111 111</a>
+                        </svg>+48 111 111 111</a>
                     </li>
                 </ul>
             </div>
@@ -69,7 +68,7 @@
             <div class="container">
                 <ul class="portfolio-signedphotos-list list">
                     <li class="portfolio-signedphotos-li">
-                        <figure><img src="images/imag1.jpg" width="370" height="294"
+                        <figure class="portfolio-card"><div class="portfolio-sign-div"></div><p class="portfolio-sign-p">TESKT</p><img src="images/imag1.jpg" width="370" height="294"
                                 alt="Zdjęcie pokazujące włączonego laptopa. Na jego ekranie widać 3 osoby obok siebie - dwie kobiety po lewej i prawej, oraz jednego mężczyznę po środku.">
                             <figcaption class="portfolio-figcaption">
                                 <h2>Technocrack</h2>
