--- a/index.html
+++ b/index.html
@@ -114,17 +114,22 @@
                     <li>
                         <img src="images/img1.jpg" width="370" height="294"
                             alt="ktoś pisze na klawiaturze, a przed sobą ma tableta i monitor">
-                    <div class="sign">
+                    <div class="about-sign">
                         <div></div><p>APLIKACJE KOMPUTEROWE</p></div>
                         </li>
                     <li>
                         <img src="images/img2.jpg" width="370" height="294"
                             alt="ktoś trzyma telefon w dłoni i siedzi przy laptopie">
-                    </li>
+                    <div class="about-sign"> <div></div> <p>APLIKACJE MOBILNE</p> </div>
+                        </li>
                     <li>
                         <img src="images/img3.jpg" width="370" height="294"
                             alt="pokazany tablet z paletą barw złożoną z małych pięciokątów w jeden duży pięciokąt">
-                    </li>
+                    <div class="about-sign">
+                        <div></div>
+                        <p>ROZWIĄZANIA GRAFICZNE</p>
+                    </div>
+                        </li>
                 </ul>
             </div>
         </section>
