powrot do pcozatku

--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
             <div class="container">
                 <ul class="portfolio-signedphotos-list list">
                     <li class="portfolio-signedphotos-li">
-                        <figure class="portfolio-card"><div class="portfolio-sign-div"></div><p class="portfolio-sign-p">TESKT</p><img src="images/imag1.jpg" width="370" height="294"
+                        <figure> <img src="images/imag1.jpg" width="370" height="294"
                                 alt="Zdjęcie pokazujące włączonego laptopa. Na jego ekranie widać 3 osoby obok siebie - dwie kobiety po lewej i prawej, oraz jednego mężczyznę po środku.">
                             <figcaption class="portfolio-figcaption">
                                 <h2>Technocrack</h2>
