--- a/portfolio.html
+++ b/portfolio.html
@@ -68,9 +68,11 @@
             <div class="container">
                 <ul class="portfolio-signedphotos-list list">
                     <li class="portfolio-signedphotos-li">
-                        <figure class="img-portfolio"> <img src="images/imag1.jpg" width="370" height="294"
+                        <figure class="img-portfolio"><div class="box">
+                            <p>text</p>
+                        </div> <img src="images/imag1.jpg" width="370" height="294"
                                 alt="Zdjęcie pokazujące włączonego laptopa. Na jego ekranie widać 3 osoby obok siebie - dwie kobiety po lewej i prawej, oraz jednego mężczyznę po środku.">
-                            <div class="box"><p>text</p></div><figcaption class="portfolio-figcaption">
+                            <figcaption class="portfolio-figcaption">
                                 <h2>Technocrack</h2>
                                 <p>Strona internetowa</p>
                             </figcaption>
