--- a/portfolio.html
+++ b/portfolio.html
@@ -37,14 +37,16 @@
                 </nav>
                 <ul class="portfolio-header-contacts list">
                     <li>
-                        <a class="portfolio-header-icon" href="mailto:info@devstudio.com"> <svg class="portfolio-envelope-icon" width="16" height="12">
-                            <use href="images/sprite.svg#icon-envelope"></use>
-                        </svg>info@devstudio.com</a>
+                        <a class="portfolio-header-icon" href="mailto:info@devstudio.com"> <svg
+                                class="portfolio-envelope-icon" width="16" height="12">
+                                <use href="images/sprite.svg#icon-envelope"></use>
+                            </svg>info@devstudio.com</a>
                     </li>
                     <li>
-<a class="portfolio-header-icon" href="tel:+48111111111"><svg class="portfolio-smartphone-icon" width="10" height="16">
-                            <use href="images/sprite.svg#icon-smartphone"></use>
-                        </svg>+48 111 111 111</a>
+                        <a class="portfolio-header-icon" href="tel:+48111111111"><svg class="portfolio-smartphone-icon"
+                                width="10" height="16">
+                                <use href="images/sprite.svg#icon-smartphone"></use>
+                            </svg>+48 111 111 111</a>
                     </li>
                 </ul>
             </div>
@@ -68,83 +70,129 @@
             <div class="container">
                 <ul class="portfolio-signedphotos-list list">
                     <li class="portfolio-signedphotos-li">
-                        <figure class="img-portfolio"><div class="box">
-                            <p>text</p>
-                        </div> <img src="images/imag1.jpg" width="370" height="294"
-                                alt="Zdjęcie pokazujące włączonego laptopa. Na jego ekranie widać 3 osoby obok siebie - dwie kobiety po lewej i prawej, oraz jednego mężczyznę po środku.">
-                            <figcaption class="portfolio-figcaption">
-                                <h2>Technocrack</h2>
-                                <p>Strona internetowa</p>
-                            </figcaption>
-                        </figure>
+                        <div class="top-technocrack">
+                            <figure> <div class="portfolio-overlay-1"><img class="img1" src="images/imag1.jpg" width="370" height="294"
+                                    alt="Zdjęcie pokazujące włączonego laptopa. Na jego ekranie widać 3 osoby obok siebie - dwie kobiety po lewej i prawej, oraz jednego mężczyznę po środku.">
+                                <div class="portfolio-overlay"><p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
+                                do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div></div>
+                                <figcaption class="portfolio-figcaption">
+                                    <h2>Technocrack</h2>
+                                    <p>Strona internetowa</p>
+                                </figcaption>
+                            </figure>
+                        </div>
                     </li>
                     <li class="portfolio-signedphotos-li">
-                        <figure><img src="images/imag2.jpg" width="370" height="294"
+                        <figure><div class="portfolio-overlay-1"><img src="images/imag2.jpg" width="370" height="294"
                                 alt="Zdjęcie pokazujące dwóch zawodników grających w koszykówkę. Jeden z nich ma fioletowy strój, drugi biały.">
-                            <figcaption class="portfolio-figcaption">
+                                <div class="portfolio-overlay"><p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
+                                do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div></div><figcaption class="portfolio-figcaption">
                                 <h2>Grafika New Orlean vs Golden Star</h2>
                                 <p>Dizajn</p>
                             </figcaption>
                         </figure>
                     </li>
                     <li class="portfolio-signedphotos-li">
-                        <figure><img src="images/imag3.jpg" width="370" height="294"
+                        <figure><div class="portfolio-overlay-1"><img src="images/imag3.jpg" width="370" height="294"
                                 alt="Zdjęcie pokazujące logo restauracji. Kolejno od góry jest na nim napisane: The Seafood est 2001 RESTAURANT.">
-                            <figcaption class="portfolio-figcaption">
+                            <div class="portfolio-overlay">
+                                <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                                    platformę
+                                    do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                            </div>
+                            </div>
+                                <figcaption class="portfolio-figcaption">
                                 <h2>Restauracja Seafood</h2>
                                 <p>Aplikacja</p>
                             </figcaption>
                         </figure>
                     </li>
                     <li class="portfolio-signedphotos-li">
-                        <figure><img src="images/imag4.jpg" width="370" height="294"
+                        <figure>
+                            <div class="portfolio-overlay-1"><img src="images/imag4.jpg" width="370" height="294"
                                 alt="Zdjęcie pokazujące czarne słuchawki nauszne.">
-                            <figcaption class="portfolio-figcaption">
+                        <div class="portfolio-overlay">
+                            <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                                platformę
+                                do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                        </div>
+                        </div>
+                                <figcaption class="portfolio-figcaption">
                                 <h2>Projekt Prime</h2>
                                 <p>Marketing</p>
                             </figcaption>
                         </figure>
                     </li>
                     <li class="portfolio-signedphotos-li">
-                        <figure><img src="images/imag5.jpg" width="370" height="294"
+                        <figure><div class="portfolio-overlay-1"><img src="images/imag5.jpg" width="370" height="294"
                                 alt="Zdjęcie pokazujące dwa pudełka - białe z żółtą elipsą i napisami, oraz brązowe z napisami.">
-                            <figcaption class="portfolio-figcaption">
-                                <h2>Projekt Boxes</h2>
+                            <div class="portfolio-overlay">
+                                <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                                    platformę
+                                    do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                            </div>
+                            </div>
+                                <figcaption class="portfolio-figcaption">
+                                <h2>Projekt portfolio-overlay-1es</h2>
                                 <p>Aplikacja</p>
                             </figcaption>
                         </figure>
                     </li>
                     <li class="portfolio-signedphotos-li">
-                        <figure><img src="images/imag6.jpg" width="370" height="294"
+                        <figure><div class="portfolio-overlay-1"><img src="images/imag6.jpg" width="370" height="294"
                                 alt="Zdjęcie pokazujące włączony monitor.">
-                            <figcaption class="portfolio-figcaption">
+                        <div class="portfolio-overlay">
+                            <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                                platformę
+                                do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                        </div>
+                        </div>
+                                <figcaption class="portfolio-figcaption">
                                 <h2>Inspiration has no Borders</h2>
                                 <p>Strona internetowa</p>
                             </figcaption>
                         </figure>
                     </li>
                     <li class="portfolio-signedphotos-li">
-                        <figure><img src="images/imag7.jpg" width="370" height="294"
+                        <figure><div class="portfolio-overlay-1"><img src="images/imag7.jpg" width="370" height="294"
                                 alt="Zdjęcie pokazujące otwartą książkę. Są widoczne dwie strony. Na lewej widać kobietę suszącą sobie włosy suszarką. Na drugiej dwie kobiety odwrócone tyłem do widza i nagłówek Iam Limited Edition.">
-                            <figcaption class="portfolio-figcaption">
+                        <div class="portfolio-overlay">
+                            <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                                platformę
+                                do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                        </div>
+                        </div>
+                                <figcaption class="portfolio-figcaption">
                                 <h2>Magazin Limited Edition</h2>
                                 <p>Dizajn</p>
                             </figcaption>
                         </figure>
                     </li>
                     <li class="portfolio-signedphotos-li">
-                        <figure><img src="images/imag8.jpg" width="370" height="294"
+                        <figure><div class="portfolio-overlay-1"><img src="images/imag8.jpg" width="370" height="294"
                                 alt="Zdjęcie pokazujące białą zawieszkę, ze złotym wisiorkiem i czarnym napisem labeltag.">
-                            <figcaption class="portfolio-figcaption">
+                        <div class="portfolio-overlay">
+                            <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                                platformę
+                                do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                        </div>
+                        </div>
+                                <figcaption class="portfolio-figcaption">
                                 <h2>Projekt LAB</h2>
                                 <p>Marketing</p>
                             </figcaption>
                         </figure>
                     </li>
                     <li class="portfolio-signedphotos-li">
-                        <figure><img src="images/imag9.jpg" width="370" height="294"
+                        <figure><div class="portfolio-overlay-1"><img src="images/imag9.jpg" width="370" height="294"
                                 alt="Zdjęcie pokazujące włączonego laptopa, na którego klawiaturze ktoś trzyma dłonie. Na jego ekranie widać reklamę(lub stronę) z nagłówkiem growing business. Po lewej stronie są okulary.">
-                            <figcaption class="portfolio-figcaption">
+                        <div class="portfolio-overlay">
+                            <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                                platformę
+                                do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                        </div>
+                        </div>
+                                <figcaption class="portfolio-figcaption">
                                 <h2>Growing Business</h2>
                                 <p>Aplikacja</p>
                             </figcaption>
