--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
     </footer>
                     <div class="backdrop is-hidden" data-modal>
                         <div class="modal">
-                            <button class="index-close-button" type="button" data-modal-close>X</button>
+                            <button class="close-btn" type="button" data-modal-close>X</button>
                         </div>
                     </div>
     <script src="./js/modal.js"></script>
